# book_man

./: .gitignore  README.md  book-man  pyproject.toml
output/: .gitkeep
src/book_man/: __init__.py  __main__.py  cli.py  epub_converter.py
